Add users object to project
